小程序事件绑定

--- a/1.小程序/02.代码/demo/pages/index/index.wxml
+++ b/1.小程序/02.代码/demo/pages/index/index.wxml
@@ -10,5 +10,13 @@
 <view class="indexContainer">
     <image class="avatarUrl" src="/static/images/dazuo.jpeg"></image>
     <text class="username">{{msg}}</text>
-    <button>欢迎来到尚硅谷</button>
+    <!-- <view bind:tap="handleParent">
+        <button bind:tap="handleClick">欢迎来到尚硅谷</button>
+    </view> -->
+    <!-- <view capture-catch:tap="handleParent">
+        <button capture-bind:tap="handleClick">欢迎来到尚硅谷</button>
+    </view> -->
+    <view bindtap="handleParent">
+        <button capture-bind:tap="handleClick">欢迎来到尚硅谷</button>
+    </view>
 </view>
