33.小程序列表渲染

--- a/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
+++ b/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
@@ -7,20 +7,16 @@
     indicator-color="ivory"
     indicator-active-color="#d43c33"
     >
-        <swiper-item class="bannerItem">
-            <image class="bannerImg" src="/static/images/dazuo.jpeg"></image>
-        </swiper-item>
-        <swiper-item class="bannerItem">
-            <image class="bannerImg" src="/static/images/dazuo.jpeg"></image>
-        </swiper-item>
-        <swiper-item class="bannerItem">
-            <image class="bannerImg" src="/static/images/dazuo.jpeg"></image>
-        </swiper-item>
-        <swiper-item class="bannerItem">
-            <image class="bannerImg" src="/static/images/dazuo.jpeg"></image>
-        </swiper-item>
-        <swiper-item class="bannerItem">
-            <image class="bannerImg" src="/static/images/dazuo.jpeg"></image>
+        <!-- <swiper-item v-for="(banner,index) in banners" :key="item.id" class="bannerItem">
+            <image class="bannerImg" :src="banner.pic"></image>
+        </swiper-item> -->
+        <swiper-item 
+        class="bannerItem" 
+        wx:for="{{banners}}" 
+        wx:for-item="banner"
+        wx:key="id"
+        >
+            <image class="bannerImg" src="{{banner.pic}}"></image>
         </swiper-item>
     </swiper>
 
@@ -32,19 +28,19 @@
         </view>
         <view class="navItem">
             <text class="iconfont icon-gedan1"></text>
-            <text class="navTitle">每日推荐</text>
+            <text class="navTitle">歌单</text>
         </view>
         <view class="navItem">
             <text class="iconfont icon-icon-ranking"></text>
-            <text class="navTitle">每日推荐</text>
+            <text class="navTitle">排行榜</text>
         </view>
         <view class="navItem">
             <text class="iconfont icon-diantai"></text>
-            <text class="navTitle">每日推荐</text>
+            <text class="navTitle">电台</text>
         </view>
         <view class="navItem">
             <text class="iconfont icon-zhiboguankanliangbofangsheyingshexiangjixianxing"></text>
-            <text class="navTitle">每日推荐</text>
+            <text class="navTitle">直播</text>
         </view>
     </view>
 </view>
