--- a/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
+++ b/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
@@ -43,4 +43,31 @@
             <text class="navTitle">直播</text>
         </view>
     </view>
+
+    <!-- 推荐歌曲区域 -->
+    <view class="recommendContainer">
+        <view class="header">
+            <view class="title">推荐歌曲</view>
+            <view class="moreContent">
+                <view class="moreTitle">为你精心推荐</view>
+                <view class="more">查看更多</view>
+            </view>
+        </view>
+        <scroll-view 
+        class="recommendScroll"
+        enable-flex
+        scroll-x
+        >
+            <view 
+            class="recommendItem"
+            wx:for="{{recommendList}}"
+            wx:key="id"
+            >
+                <image class="recommendImg" src="{{item.picUrl}}"></image>
+                <view class="recommendName">
+                    {{item.name}}
+                </view>
+            </view>
+        </scroll-view>
+    </view>
 </view>
