39.小程序组件拆分

--- a/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
+++ b/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
@@ -46,13 +46,9 @@
 
     <!-- 推荐歌曲区域 -->
     <view class="recommendContainer">
-        <view class="header">
-            <view class="title">推荐歌曲</view>
-            <view class="moreContent">
-                <view class="moreTitle">为你精心推荐</view>
-                <view class="more">查看更多</view>
-            </view>
-        </view>
+
+        <!-- NavHeader组件 -->
+        <NavHeader title="推荐歌曲" moreTitle="为你精心推荐"/>
         <scroll-view 
         class="recommendScroll"
         enable-flex
@@ -69,5 +65,10 @@
                 </view>
             </view>
         </scroll-view>
+    </view>
+
+    <!-- 排行榜区域 -->
+    <view class="topContainer">
+        <NavHeader title="排行榜" moreTitle="热歌风向标"/>
     </view>
 </view>
