--- a/1.小程序/02.代码/硅谷云音乐/pages/video/video.wxml
+++ b/1.小程序/02.代码/硅谷云音乐/pages/video/video.wxml
@@ -3,7 +3,7 @@
   <view class="header">
     <image src="/static/images/video/video.jpg"></image>
     <input type="text" placeholder="光辉岁月" placeholder-class="placeholder"></input>
-    <image src="/static/images/logo.png"></image>
+    <image bindtap="testApi" src="/static/images/logo.png"></image>
   </view>
 
   <!-- 导航栏区域 -->
@@ -28,7 +28,12 @@
     wx:for="{{videoList}}"
     wx:key="vid"
     >
-      <video src="{{item.urlInfo.url}}" class="common"></video>
+      <video 
+      id="{{item.vid}}" 
+      src="{{item.urlInfo.url}}" 
+      class="common"
+      bindplay="handlePlay"
+      ></video>
       <view class="content">{{item.title}}</view>
       <view class="footer">
         <image class="avatar" src="{{item.creator.avatarUrl}}"></image>
