--- a/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
+++ b/1.小程序/02.代码/硅谷云音乐/pages/index/index.wxml
@@ -22,7 +22,7 @@
 
     <!-- nav导航区域结构 -->
     <view class="nav">
-        <view class="navItem">
+        <view class="navItem" bindtap="toRecommendSong">
             <text class="iconfont icon-meirituijian-"></text>
             <text class="navTitle">每日推荐</text>
         </view>
